Adjust spacing on title slide
Institute now looks more associated with author, and event details are
spaced further down

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -1901,11 +1901,11 @@ numbers here are totally fictitious when it comes to the actual files.
   \begin{beamercolorbox}[sep=0pt,center]{author}
     \usebeamerfont{author}\insertauthor
   \end{beamercolorbox}
-  \bigskip
+  \smallskip
   \begin{beamercolorbox}[sep=0pt,center]{institute}
     \usebeamerfont{institute}\insertinstitute
   \end{beamercolorbox}
-  \bigskip
+  \bigskip\medskip
   \begin{beamercolorbox}[sep=0pt,center]{date}
     \usebeamerfont{date}%
     \ifdefvoid{\insertoccasion}{}{\insertoccasion\\}%
