Remove stray text

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -2491,9 +2491,7 @@ numbers here are totally fictitious when it comes to the actual files.
 % Again, we draw the logo with \pkg{tikz} rather than use a bitmap.
 % This means we need to ensure it is loaded, along with \pkg{keyval} for option
 % handling, \pkg{ifthen} for implementing the option handling logic, and \pkg{calc} for
-% calculating lengths. Note that the Metadata Standards Catalog Working Group
-% recycles the logo of the Metadata Standards Directory Working Group, hence
-% the macros below use \texttt{msd} instead of \texttt{msc}.
+% calculating lengths.
 %
 %    \begin{macrocode}
 \RequirePackage{ifthen,calc,keyval}
