Simplify display of colour palette

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -773,18 +773,21 @@ so you can tell them apart.
 \sample{rdayellow}\enspace\texttt{rdayellow}\par
 \sample{rdagreen}\enspace \texttt{rdagreen}\par
 \sample{rdabrown}\enspace \texttt{rdabrown}\par
-\sample{rdagray}\enspace  \texttt{rdagray}\par
-\sample{rdagrey}\enspace  \texttt{rdagrey}\par
+\sample{rdagray}\enspace  \begin{tabular}{@{}l@{}}
+  \texttt{rdagray}\\\texttt{rdagrey}
+\end{tabular}\par
 \sample{rdamidyellow}\enspace\texttt{rdamidyellow}\par
 \sample{rdamidgreen}\enspace \texttt{rdamidgreen}\par
 \sample{rdamidbrown}\enspace \texttt{rdamidbrown}\par
-\sample{rdamidgray}\enspace  \texttt{rdamidgray}\par
-\sample{rdamidgrey}\enspace  \texttt{rdamidgrey}\par
+\sample{rdamidgray}\enspace  \begin{tabular}{@{}l@{}}
+  \texttt{rdamidgray}\\\texttt{rdamidgrey}
+\end{tabular}\par
 \sample{rdalightyellow}\enspace\texttt{rdalightyellow}\par
 \sample{rdalightgreen}\enspace \texttt{rdalightgreen}\par
 \sample{rdalightbrown}\enspace \texttt{rdalightbrown}\par
-\sample{rdalightgray}\enspace  \texttt{rdalightgray}\par
-\sample{rdalightgrey}\enspace  \texttt{rdalightgrey}\par
+\sample{rdalightgray}\enspace  \begin{tabular}{@{}l@{}}
+  \texttt{rdalightgray}\\\texttt{rdalightgrey}
+\end{tabular}\par
 \end{multicols}
 \end{frame}
 
