Add missing tikz dependency in MIG group style

--- a/rdaslides.dtx
+++ b/rdaslides.dtx
@@ -2505,7 +2505,7 @@ numbers here are totally fictitious when it comes to the actual files.
 %    \begin{macrocode}
 \RequirePackage{ifthen,calc,keyval}
 \RequirePackage{tikz}
-\usetikzlibrary{shapes.geometric,positioning}
+\usetikzlibrary{calc,shapes.geometric,positioning}
 
 %    \end{macrocode}
 %
